[package]
name = "est"
authors = ["29 <791603901@qq.com>"]
version = "0.3.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["std", "anyhow", "result", "collections", "indexmap"]
categories = ["algorithms", "asynchronous", "data-structures", "memory-management", "rust-patterns"]
repository = "https://github.com/opensound-org/est"
homepage = "https://github.com/opensound-org/est"
description = """
Extensions for the rust Standard library and Tokio.
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we used `rustc-check-cfg` in build script
# 因为我们在构建脚本中使用了`rustc-check-cfg`
# https://blog.rust-lang.org/2024/05/06/check-cfg.html
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"
